# myworks

./: .gitignore  README
LinuxZoo/: Makefile  foodbox.c  unload
LinuxZoo/ai/: maze.py
LinuxZoo/dogs/: Makefile  puppy.c
LinuxZoo/foodbox/: Makefile  addfood.c  addfood.h  eatfood.c  foodbox.c  foodbox.h  load
Net/Operator/: AUTHORS  Makefile.am  Makefile.in  README  configure  configure.ac
Net/Operator/autom4te.cache/: output.0  output.1  traces.0  traces.1
Net/Operator/doc/: state_machine  state_machine.dot
Net/Operator/experiments/data_sign/: sign.c
Net/Operator/experiments/lib_so/: Makefile  hello.c  main.c  plugin.c
Net/Operator/experiments/modules/: Makefile  Makefile.am  configure.ac  core_utils.c  core_utils.h  main.c  modules.c  plugin.c  plugin.h  server.h
Net/Operator/experiments/modules/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
Net/Operator/experiments/modules/mods/: Makefile  mod_test.c
Net/Operator/src/: Makefile.am  Makefile.in  connection.c  connection.h  log.c  log.h  main.c  parseconfig.c  parseconfig.h  test.conf
Net/Operator/tests/: Makefile  parseconfig.c
Net/newServer/: Makefile  MultiServers.c  README  client.c  epoll_testServer.cpp  newServer.c  server.c
Net/python/: crashwatcher.py
locks/: locks_load
modules/helloworld/: HelloWorld.c  Makefile  procfs4.c
modules/ioctl/: Makefile  ioctl.c  ioctl.h  ioctl_load  ioctl_unload  test.c
modules/locks/: Makefile  locks.c  locks_unload
modules/poll/: polltest  polltest.c  scull.c  scull_load  scull_unload
modules/scull/: Makefile  scull.c
(+59 files in other folders)
